kubernetes/apps/security/openbao/app/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openbao
  namespace: openbao
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
      app.kubernetes.io/instance: openbao
      component: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: internal
            gateway.envoyproxy.io/owning-gateway-namespace: networking
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao
            component: server
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao-acceptance
            app.kubernetes.io/name: openbao-acceptance
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao-backup
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao-config-reader
      toPorts:
        - ports: [{port: "8200", protocol: TCP}]
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao
            component: server
      toPorts:
        - ports: [{port: "8201", protocol: TCP}]
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports: [{port: "8203", protocol: TCP}]
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - {port: "53", protocol: UDP}
            - {port: "53", protocol: TCP}
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
            app.kubernetes.io/name: openbao
            component: server
      toPorts:
        - ports:
            - {port: "8200", protocol: TCP}
            - {port: "8201", protocol: TCP}
    - toEntities: [kube-apiserver]
      toPorts:
        - ports: [{port: "443", protocol: TCP}]
